--- a/云渠道/Info.plist
+++ b/云渠道/Info.plist
@@ -129,6 +129,10 @@
 	<string>开启麦克风</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>是否允许云中介打开相册以供你选择要发送的图片</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
