--- a/云渠道/Info.plist
+++ b/云渠道/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>zh_CN</string>
 	<key>CFBundleDisplayName</key>
-	<string>云中介</string>
+	<string>云渠道</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.7</string>
+	<string>3.0</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -62,7 +62,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>5</string>
+	<string>1</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>wechat</string>
@@ -120,15 +120,15 @@
 		</dict>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>是否允许云中介开启相机拍照以便拍照发送图片</string>
+	<string>是否允许云渠道开启相机拍照以便拍照发送图片</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>云中介需要通过您的地理位置信息获取您周边的新房相关数据</string>
+	<string>云渠道需要通过您的地理位置信息获取您周边的新房相关数据</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>云中介需要通过您的地理位置信息获取您周边的新房相关数据</string>
+	<string>云渠道需要通过您的地理位置信息获取您周边的新房相关数据</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>开启麦克风</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>是否允许云中介打开相册以供你选择要发送的图片</string>
+	<string>是否允许云渠道打开相册以供你选择要发送的图片</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
