--- a/云渠道/Info.plist
+++ b/云渠道/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>3.8</string>
+	<string>4.0</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -124,6 +124,8 @@
 	<key>NSCameraUsageDescription</key>
 	<string>是否允许云渠道开启相机拍照以便拍照发送图片</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>云渠道需要通过您的地理位置信息获取您周边的新房相关数据</string>
+	<key>NSLocationAlwaysUsageDescription</key>
 	<string>云渠道需要通过您的地理位置信息获取您周边的新房相关数据</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>云渠道需要通过您的地理位置信息获取您周边的新房相关数据</string>
