--- a/云渠道/Info.plist
+++ b/云渠道/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>4.0.3</string>
+	<string>4.0.4</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -64,11 +64,9 @@
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
 			<key>CFBundleURLName</key>
-			<string>jiguang</string>
+			<string></string>
 			<key>CFBundleURLSchemes</key>
-			<array>
-				<string>jiguang-2dd909361c253b51e0cd05a9</string>
-			</array>
+			<array/>
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
