--- a/云渠道/Info.plist
+++ b/云渠道/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>4.0.9</string>
+	<string>4.1.1</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -134,6 +134,8 @@
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>云渠道需要通过您的地理位置信息获取您周边的新房相关数据</string>
 	<key>NSLocationAlwaysUsageDescription</key>
+	<string>云渠道需要通过您的地理位置信息获取您周边的新房相关数据</string>
+	<key>NSLocationUsageDescription</key>
 	<string>云渠道需要通过您的地理位置信息获取您周边的新房相关数据</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>云渠道需要通过您的地理位置信息获取您周边的新房相关数据</string>
